# bedrock

./: .envrc  .gitignore  Cargo.toml  package-lock.json  shell.nix
certs/: localhost.crt  localhost.key
src/: main.rs
templates/: issues.html
