[package]
name = "bedrock"
version = "0.1.0"
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
handlebars = "3.5"
url = "2.2"
url_serde = "0.2"
warp = { version = "0.3", features = ["tls"] }
tera = "1.6"
once_cell = "1.5"
tracing = "0.1"
tracing-subscriber = "0.2"
